[package]
name = "openmls_simple_example"
version = "0.1.0"
edition = "2021"

[dependencies]
openmls = {version = "0.5.0", features = ["test-utils"]}
openmls_basic_credential = {version = "0.2.0", features = ["test-utils"]}
openmls_rust_crypto = "0.2.0"
openmls_traits = "0.2.0"
bytes = "1.7.1"
openmls_test = "0.1.0-pre.1"
openmls_memory_storage = "0.3.0-pre.2"
openmls_libcrux_crypto = "0.1.0-pre.2"


[dependencies.rand]
optional = true
version = "0.8"



